2010-01-07  Juan Manuel Ramon  <juanmanuel.ramon@artica.es>

	* pandora_server_upgrade: Changed permissions in this file to make it executable by default.

	Fixes bug #3146314.

2010-01-07  Juan Manuel Ramon  <juanmanuel.ramon@artica.es>
       
	* pandora_server_installer: Installer applies correct permissions 
	  to /var/spool/pandora directory using pandora_server_installer in Suse. 
	  Fixes bug #3150287.

2011-01-07  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.pl: There is no reason why proc modules
	cannot be redefined to operate with min/max

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm, lib/PandoraFMS/Core.pm: Removed calls to
	  safe_input related to tserver.name. Server names are not
	  converted to HTML entities yet.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Updated version strings for the 3.2
	  release.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_recode_db.pl: Added back to the repository until
	  version 3.2 is released.

2010-12-27  Sancho Lerena <slerena@artica.es>

	* util/pandora_sync_db.pl: Fixed a undefined condition.

2010-12-22  Sergio Martin <sergio.martin@artica.es>

	*  util/pandora_manage.pl: Fixed duplicate module creation
	into config file

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed day name array. 0 corresponds
	  to Sunday. Fixes bug #3122177.

2010-12-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed codification bug in the
	conf modules declaration

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_recode_db.pl: Removed from repository. Not
	  needed anymore (kept in the 3.1 branch).

2010-12-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Improved the end of execution
	message.

2010-12-20  Miguel de Dios  <miguel.dedios@artica.es>
	
	* util/pandora_recode_db.pl: added to recode the table "tpolicy_modules".
