@@ -1,3 +1,9 @@
+2011-01-22  Sancho Lerena <slerena@artica.es>
+
+	* lib/PandoraFMS/Config.pm: Updated version, we're on 4.0-dev !
+
+	* lib/PandoraFMS/Tools.pm: Detect new embedded agents
+
 2010-01-07  Juan Manuel Ramon  <juanmanuel.ramon@artica.es>
 
 	* pandora_server_upgrade: Changed permissions in this file to make it executable by default.
